# projects_starter

./: CMakeLists.txt  README.md  main.cpp
cmake/: assimp.cmake  ffmpeg.cmake  glfw.cmake  opencv.cmake
linux/opencv_starters/opencv_starter_project.1/: CMakeLists.txt  main.cpp
project_starter/include/common/: Utils.h
project_starter/include/core/: Application.h
project_starter/src/common/: Utils.cpp
project_starter/src/core/: Application.cpp
